Frontend-CourseProject/src/components/Navigation.css
html,
body {
    margin: 0;
    padding: 0;
}


.navigation {
    background-color: #161616;
    color: white;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 1rem;
    margin: 0 !important;
    box-sizing: border-box;
    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.661);
}

.logo img {
    width: 120px; 
    height: auto; 
    margin-right: 1rem;
    margin-left: 5em;
}

.search-bar {
    flex: 1;
    max-width: 300px; 
    margin: 0 auto; 
    position: relative;
}

.search-bar input {
    background-color: #212121;
    color: #8F8989;
    padding: 0.9em 2em 0.9em 40px; 
    border: none;
    border-radius: 10px;
    width: 100%;
    font-family: "Helvetica Neue", sans-serif; 
    font-weight: bold; 
    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.661);
}

.search-icon {
    position: absolute;
    top: 50%;
    left: 10px; 
    transform: translateY(-50%);
    color: white;
}

.nav-links {
    list-style-type: none;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    margin: 0;
    margin-right: 1em;
}

.nav-links li {
    margin: 0 2em;
}

.nav-links a {
    color: white;
    text-decoration: none;
    font-family: "Merriweather Sans", sans-serif; 
    font-weight: 600; 
    font-size: 18px; 
}

.nav-links a.active {
    font-weight: bold; 
}

